fix: go on favourites text dark mode

--- a/src/assets/scss/pages/Browse.scss
+++ b/src/assets/scss/pages/Browse.scss
@@ -20,5 +20,13 @@
         flex-wrap: wrap;
         justify-content: center;
     }
+
+    .dark & {
+        color: white;
+
+        &-link {
+            color: white;
+        }
+    }
 }
 
